--- a/public/modules/projects/views/list-projects.client.view.html
+++ b/public/modules/projects/views/list-projects.client.view.html
@@ -33,10 +33,10 @@
 
 		<md-grid-list
 			md-cols-sm="1" md-cols-md="2" md-cols-gt-md="3"
-			md-row-height-gt-md="1:1.60" md-row-height="1:1"
+			md-row-height-gt-md="1:0.22" md-row-height="1:0.16"
 			md-gutter="16px" md-gutter-gt-sm="16px">
 
-			<md-grid-tile flex ng-repeat="project in querySearch(searchText)" md-rowspan="1" md-colspan="1" md-colspan-sm="1">
+			<md-grid-tile flex ng-repeat="project in querySearch(searchText)" md-rowspan="{{project.rowSpan}}" md-colspan="1" md-colspan-sm="1">
 				<md-card flex style="height:100%">
 					<md-toolbar class="cardHeader">
 						<div class="md-toolbar-tools">
@@ -88,12 +88,12 @@
 									<p>{{project.organisation}} </p>
 								</div>
 							</md-list-item>
-							<md-list-item class="md-2-line projectListInfo">
+							<!-- <md-list-item class="md-2-line projectListInfo">
 								<div class="md-list-item-text" flex>
 									<h3> Number of estimatiors  </h3>
 									<p> {{project.users.length}} </p>
 								</div>
-							</md-list-item>
+							</md-list-item> -->
 							<md-list-item ng-show="{{project.openForEstimation}}" class="md-2-line projectListInfo">
 								<div class="md-list-item-text projectListInfo" flex>
 									<h3> Status </h3>
