Show organisation on the project edit page

--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -2,8 +2,13 @@
 	<md-card flex>
 		<md-card-content>
 			<md-input-container flex>
-				<label>Project Description</label>
+				<label>Description</label>
 				<textarea ng-model="project.description" ng-readonly = "isOpenForEstimation()"></textarea>
+			</md-input-container>
+
+			<md-input-container ng-show="project.organisation" flex>
+				<label>Organisation</label>
+				<textarea ng-model="project.organisation" ng-readonly = "1"></textarea>
 			</md-input-container>
 
 			<md-list>
