--- a/public/modules/projects/views/create-project.client.view.html
+++ b/public/modules/projects/views/create-project.client.view.html
@@ -9,8 +9,8 @@
 				</md-input-container>
 				
 				<div>
-					<span flex></span>
 					<label>Project Description</label>
+					 <div  text-angular="text-angular" ta-toolbar="[['h1', 'h2', 'h3', 'bold', 'italics', 'underline','ul', 'ol', 'redo', 'undo', 'clear'], ['html', 'insertImage', 'insertLink', 'insertVideo', 'wordcount', 'charcount']]" ng-model="project.description" ta-disabled='isOpenForEstimation()'></div>
 				</div>
 				
 				<md-list>
