--- a/mobile_app/www/modules/core/views/home.client.view.html
+++ b/mobile_app/www/modules/core/views/home.client.view.html
@@ -3,7 +3,7 @@
 		<!--<img ng-src="../../../img/Swarm.gif" height="540" width="960" class="md-card-image" alt="Washed Out">-->
 		<img src="modules/core/img/Swarm.jpg" height="auto" width="auto" class = "imageMain">
 		<md-card-content>
-			<h2 class="md-title">Estimate Swarm</h2>
+			<h2 class="md-title">Crowd Source</h2>
 			<p>
 			The best project estimation system to date. Delivering your project on time, every time.
 			</p>
