--- a/mobile_app/www/modules/sidenav/views/sidenav.client.view.html
+++ b/mobile_app/www/modules/sidenav/views/sidenav.client.view.html
@@ -4,7 +4,7 @@
 		<md-content class="coloredBackground">
 			<md-toolbar>
 				<div class="md-toolbar-tools">
-					<h1><span>Estimate Swarm</span></h1>
+					<h1><span>Crowd Source</span></h1>
 					<span flex></span>
 					<md-button class="md-icon-button md-primary" ng-click="toggleLeft()" aria-label="Settings" hide-gt-md="">
 						<md-icon md-svg-icon="modules/sidenav/img/chevron_left.svg" class="lightIcon"></md-icon>
