--- a/public/modules/projects/css/projects.css
+++ b/public/modules/projects/css/projects.css
@@ -2,6 +2,20 @@
     height: 10px;
 }
 
+.ta-editor.ta-html, .ta-scroll-window.form-control {
+	min-height: 100px !important; 
+	height: auto !important;
+	overflow: auto !important;
+	font-family: inherit !important;
+	font-size: 100% !important;
+}
+
+.ta-scroll-window > .ta-bind {
+	height: auto !important;
+	min-height: 100px !important;
+	padding: 6px 12px !important;
+}
+
 md-fab-toolbar .md-fab-toolbar-wrapper {
 	display: block;
 	position: relative;
