Project node title validation

--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -104,7 +104,7 @@
 					</md-button>
 					<md-input-container class = "treeInput" flex>
 						<label>Title</label>
-						<input ng-model="node.title" ng-readonly = "isOpenForEstimation()">
+						<input ng-model="node.title" ng-readonly = "isOpenForEstimation()" ng-change="updateLocalTree()" required>
 					</md-input-container>
 
 					<md-input-container class = "treeInput" flex ="10" ng-show = "estimator() && isOpenForEstimation()">
@@ -169,7 +169,7 @@
 				<md-button class = "md-primary" ng-click = "saveProject()" ng-show = "owner() && !isOpenForEstimation()">
 					Save Project
 				</md-button>
-				<md-button class = "md-primary" ng-click = "openForEstimation()" ng-show = "owner() && !isOpenForEstimation()">
+				<md-button class = "md-primary" ng-click = "openForEstimation()" ng-show = "owner() && !isOpenForEstimation()" ng-disabled="!isNodeNamesValid">
 					Open for Estimation
 				</md-button>
 				<md-button class="md-primary" ng-click="newSubItem(this)" ng-show = "owner() && !isOpenForEstimation()">
