--- a/public/modules/projects/views/create-project.client.view.html
+++ b/public/modules/projects/views/create-project.client.view.html
@@ -17,16 +17,16 @@
 
 				<md-input-container>
 					<label>Organisation</label>
-					<md-select ng-model="projectOrganisation">
+					<md-select ng-model="projectOrganisation" required>
 						<md-option ng-repeat="organisation in userOrganisations" value="{{organisation}}">
 							{{organisation}}
 						</md-option>
 					</md-select>
 				</md-input-container>
-				
+
 				<md-list>
 					<md-subheader class="md-no-sticky">Estimators</md-subheader>
-					<md-list-item class="md-2-line" ng-repeat="person in people" layout="row">
+					<md-list-item class="md-2-line" ng-repeat="person in queryEstimators()" layout="row">
 						<div class="md-list-item-text">
 							<h3>{{person.firstName}} {{person.lastName}}</h3>
 							<p> {{person.name}} </p>
