Changed root node name

--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -11,6 +11,7 @@
 				<div text-angular ng-model="project.description" ta-toolbar="[[]]" ta-disabled="isOpenForEstimation()"></div>
 				<span flex></span>
 			</div>
+			<md-divider></md-divider>
 			<md-list>
 				<md-list-item ng-click="toggleEstimatorsList()">
 					<md-button class="md-icon-button" aria-label="Use Android">
