Made button text smaller

--- a/public/modules/reports/views/list-reports.client.view.html
+++ b/public/modules/reports/views/list-reports.client.view.html
@@ -84,7 +84,7 @@
 							View Report
 						</md-button>
 						<md-button aria-label="View/Edit" class="md-button" ng-click="reopenEstimation(project)" ng-show="isOwner(project) && !alreadyOpened(project)" flex> 
-							Reopen for Estimation
+							Reopen
 						</md-button>
 						<md-button aria-label="View/Edit" class="md-button" ng-disabled="true" ng-show="isOwner(project) && alreadyOpened(project)" flex>
 							Already reopened
