--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -1,7 +1,7 @@
 <div ng-controller="MainController">
 	<md-card>
 		<!--<img ng-src="../../../img/Swarm.gif" height="540" width="960" class="md-card-image" alt="Washed Out">-->
-		<img src="modules/core/img/Swarm.jpg" height="auto" width="auto" class = "imageMain">
+		<img src="modules/core/img/Swarm_Buzz.jpg" height="auto" width="auto" class = "imageMain">
 		<md-card-content>
 			<h2 class="md-title">Crowd Source</h2>
 			<p>
