added the usermanual to the website

--- a/public/modules/sidenav/views/sidenav.client.view.html
+++ b/public/modules/sidenav/views/sidenav.client.view.html
@@ -37,6 +37,8 @@
 				<md-divider></md-divider>
 
 				<md-button class="sideNavItem" ng-click="signOut();toggleLeft()"><span>Sign Out</span></md-button>
+				<md-divider></md-divider>
+				<md-button class="sideNavItem" href="usermanual.pdf" >User Manual</md-button>
 			</div>
 		</md-content>
 	</md-sidenav>
