--- a/public/modules/projects/views/show-description.dialog.client.view.html
+++ b/public/modules/projects/views/show-description.dialog.client.view.html
@@ -9,6 +9,9 @@
 		</div>
 	</md-toolbar>
 	<md-dialog-content>
-		<p>{{proj.description}}</p>
+	<div>
+				<div text-angular ng-model="proj.description" ta-toolbar="[[]]" ta-disabled="true"></div>
+				<span flex></span>
+			</div>
 	</md-dialog-content>
 </md-dialog>
