Added default organisation to be None

--- a/public/modules/projects/views/create-project.client.view.html
+++ b/public/modules/projects/views/create-project.client.view.html
@@ -29,7 +29,7 @@
 							<h3>{{person.firstName}} {{person.lastName}}</h3>
 							<p> {{person.name}} </p>
 						</div>	
-						<md-checkbox class="md-primary" ng-model="person.selected" aria-label="selected"></md-checkbox>
+						<md-checkbox class="md-primary" ng-model="person.selected" aria-label="selected" required></md-checkbox>
 					</md-list-item>
 				</md-list>
 
