--- a/public/modules/reports/views/normalinfo.client.view.html
+++ b/public/modules/reports/views/normalinfo.client.view.html
@@ -10,7 +10,7 @@
     </div>
   </md-toolbar>
   <md-dialog-content style="max-width:800px;max-height:810px; ">
-    <div>
+    <div class="md-dialog-content">
       <p>
         This section will guide you to understand how to interpret the results of the Normal distrubution.
         The delphi wide-band method states that if a estimation lies between 10% to 20% the estimation converges well.
