--- a/public/modules/users/views/authentication/signin.client.view.html
+++ b/public/modules/users/views/authentication/signin.client.view.html
@@ -9,43 +9,45 @@
 		</div>
 	</md-toolbar>
 	<md-dialog-content>
-		<!-- <h3 class="col-md-12 text-center">Sign in using your social accounts</h3>
-		<div class="col-md-12 text-center">
-			<a href="/auth/facebook" class="undecorated-link">
-				<img src="/modules/users/img/buttons/facebook.png">
-			</a>
-			<a href="/auth/twitter" class="undecorated-link">
-				<img src="/modules/users/img/buttons/twitter.png">
-			</a>
-			<a href="/auth/google" class="undecorated-link">
-				<img src="/modules/users/img/buttons/google.png">
-			</a>
-			<a href="/auth/linkedin" class="undecorated-link">
-				<img src="/modules/users/img/buttons/linkedin.png">
-			</a>
-			<a href="/auth/github" class="undecorated-link">
-				<img src="/modules/users/img/buttons/github.png">
-			</a>
-		</div>
-		<h3 class="col-md-12 text-center">Or with your account</h3> -->
-
-		<form data-ng-submit="signin()" autocomplete="off">
-			<md-input-container>
-				<label>Username or Email</label>
-				<input name="username" data-ng-model="credentials.username">
-			</md-input-container>
-			<md-input-container>
-				<label>Password</label>
-				<input id="password" name="password" type="password" data-ng-model="credentials.password">
-			</md-input-container>
-
-			<div data-ng-show="error" class="errorMessage">
-				<strong data-ng-bind="error"></strong>
+		<div class="md-dialog-content">
+			<!-- <h3 class="col-md-12 text-center">Sign in using your social accounts</h3>
+			<div class="col-md-12 text-center">
+				<a href="/auth/facebook" class="undecorated-link">
+					<img src="/modules/users/img/buttons/facebook.png">
+				</a>
+				<a href="/auth/twitter" class="undecorated-link">
+					<img src="/modules/users/img/buttons/twitter.png">
+				</a>
+				<a href="/auth/google" class="undecorated-link">
+					<img src="/modules/users/img/buttons/google.png">
+				</a>
+				<a href="/auth/linkedin" class="undecorated-link">
+					<img src="/modules/users/img/buttons/linkedin.png">
+				</a>
+				<a href="/auth/github" class="undecorated-link">
+					<img src="/modules/users/img/buttons/github.png">
+				</a>
 			</div>
+			<h3 class="col-md-12 text-center">Or with your account</h3> -->
 
-			<md-button type="submit" class="dialogButton">Sign in</md-button>
-		</form>
+			<form data-ng-submit="signin()" autocomplete="off">
+				<md-input-container>
+					<label>Username or Email</label>
+					<input name="username" data-ng-model="credentials.username">
+				</md-input-container>
+				<md-input-container>
+					<label>Password</label>
+					<input id="password" name="password" type="password" data-ng-model="credentials.password">
+				</md-input-container>
 
-		<!-- <md-button class="dialogButton" ng-click="toggleForgotPass($event)">Forgot password?</md-button> -->
+				<div data-ng-show="error" class="errorMessage">
+					<strong data-ng-bind="error"></strong>
+				</div>
+
+				<md-button type="submit" class="dialogButton">Sign in</md-button>
+			</form>
+
+			<!-- <md-button class="dialogButton" ng-click="toggleForgotPass($event)">Forgot password?</md-button> -->
+		</div>
 	</md-dialog-content>
 </md-dialog>
