--- a/public/modules/projects/views/show-description.dialog.client.view.html
+++ b/public/modules/projects/views/show-description.dialog.client.view.html
@@ -9,6 +9,8 @@
 		</div>
 	</md-toolbar>
 	<md-dialog-content>
-		<p>{{proj.description}}</p>
+		<div class="md-dialog-content">
+			<div text-angular ng-model="proj.description" ta-toolbar="[[]]" ta-disabled="isOpenForEstimation()"></div>
+		</div>
 	</md-dialog-content>
 </md-dialog>
