--- a/public/modules/reports/views/boxinfo.client.view.html
+++ b/public/modules/reports/views/boxinfo.client.view.html
@@ -10,7 +10,7 @@
     </div>
   </md-toolbar>
   <md-dialog-content style="max-width:800px;max-height:810px; ">
-    <div>
+    <div class="md-dialog-content">
       <p>
         box plot explained.
       </p>
