--- a/public/modules/users/views/authentication/signup.client.view.html
+++ b/public/modules/users/views/authentication/signup.client.view.html
@@ -9,57 +9,59 @@
 		</div>
 	</md-toolbar>
 	<md-dialog-content>
-		<!-- <h3 class="col-md-12 text-center">Sign up using your social accounts</h3>
-		<div class="col-md-12 text-center">
-			<a href="/auth/facebook" class="undecorated-link">
-				<img src="/modules/users/img/buttons/facebook.png">
-			</a>
-			<a href="/auth/twitter" class="undecorated-link">
-				<img src="/modules/users/img/buttons/twitter.png">
-			</a>
-			<a href="/auth/google" class="undecorated-link">
-				<img src="/modules/users/img/buttons/google.png">
-			</a>
-			<a href="/auth/linkedin" class="undecorated-link">
-				<img src="/modules/users/img/buttons/linkedin.png">
-			</a>
-			<a href="/auth/github" class="undecorated-link">
-				<img src="/modules/users/img/buttons/github.png">
-			</a>
-		</div>
-		<h3 class="col-md-12 text-center">Or with your email</h3> -->
-
-		<form name="userForm" data-ng-submit="signup()" novalidate autocomplete="off">
-			<md-input-container>
-		    	<label>First Name</label>
-		    	<input required id="firstName" name="firstName" data-ng-model="credentials.firstName">
-		    </md-input-container>
-			<md-input-container>
-		    	<label>Last Name</label>
-		    	<input id="lastName" name="lastName" data-ng-model="credentials.lastName">
-		    </md-input-container>
-			<md-input-container>
-		    	<label>Email</label>
-		    	<input id="email" name="email" data-ng-model="credentials.email">
-		    </md-input-container>
-			<md-input-container>
-		    	<label>Username</label>
-		    	<input id="username" name="username" data-ng-model="credentials.username">
-		    </md-input-container>
-			<md-input-container>
-		    	<label>Password</label>
-		    	<input type="password" id="password" name="password" data-ng-model="credentials.password">
-		    </md-input-container>
-		    <md-input-container>
-		    	<label>Confirm Password</label>
-		    	<input type="password" id="confirmationPassword" name="confirmationPassword" data-ng-model="confirmationPassword">
-		    </md-input-container>
-
-		    <div data-ng-show="error" class="errorMessage">
-				<strong data-ng-bind="error"></strong>
+		<div class="md-dialog-content">
+			<!-- <h3 class="col-md-12 text-center">Sign up using your social accounts</h3>
+			<div class="col-md-12 text-center">
+				<a href="/auth/facebook" class="undecorated-link">
+					<img src="/modules/users/img/buttons/facebook.png">
+				</a>
+				<a href="/auth/twitter" class="undecorated-link">
+					<img src="/modules/users/img/buttons/twitter.png">
+				</a>
+				<a href="/auth/google" class="undecorated-link">
+					<img src="/modules/users/img/buttons/google.png">
+				</a>
+				<a href="/auth/linkedin" class="undecorated-link">
+					<img src="/modules/users/img/buttons/linkedin.png">
+				</a>
+				<a href="/auth/github" class="undecorated-link">
+					<img src="/modules/users/img/buttons/github.png">
+				</a>
 			</div>
-		    
-			<md-button type="submit" class="dialogButton">Sign up</md-button>
-		</form>
+			<h3 class="col-md-12 text-center">Or with your email</h3> -->
+
+			<form name="userForm" data-ng-submit="signup()" novalidate autocomplete="off">
+				<md-input-container>
+					<label>First Name</label>
+					<input required id="firstName" name="firstName" data-ng-model="credentials.firstName">
+				</md-input-container>
+				<md-input-container>
+					<label>Last Name</label>
+					<input id="lastName" name="lastName" data-ng-model="credentials.lastName">
+				</md-input-container>
+				<md-input-container>
+					<label>Email</label>
+					<input id="email" name="email" data-ng-model="credentials.email">
+				</md-input-container>
+				<md-input-container>
+					<label>Username</label>
+					<input id="username" name="username" data-ng-model="credentials.username">
+				</md-input-container>
+				<md-input-container>
+					<label>Password</label>
+					<input type="password" id="password" name="password" data-ng-model="credentials.password">
+				</md-input-container>
+				<md-input-container>
+					<label>Confirm Password</label>
+					<input type="password" id="confirmationPassword" name="confirmationPassword" data-ng-model="confirmationPassword">
+				</md-input-container>
+
+				<div data-ng-show="error" class="errorMessage">
+					<strong data-ng-bind="error"></strong>
+				</div>
+				
+				<md-button type="submit" class="dialogButton">Sign up</md-button>
+			</form>
+		</div>
 	</md-dialog-content>
 </md-dialog>
