Fixed some card size issues
Work on phones and tables, landscape or portrait as well as pcs. Really
high resolutions still have size issues however with the card being too
large

--- a/public/modules/projects/views/list-projects.client.view.html
+++ b/public/modules/projects/views/list-projects.client.view.html
@@ -33,7 +33,7 @@
 
 		<md-grid-list
 			md-cols-sm="1" md-cols-md="2" md-cols-gt-md="3"
-			md-row-height-gt-md="1:0.22" md-row-height="1:0.16"
+			md-row-height-sm="1:0.16" md-row-height-md="1:0.22" md-row-height-lg="1:0.22" md-row-height-gt-lg="1:0.22"
 			md-gutter="16px" md-gutter-gt-sm="16px">
 
 			<md-grid-tile flex ng-repeat="project in querySearch(searchText)" md-rowspan="{{project.rowSpan}}" md-colspan="1" md-colspan-sm="1">
