--- a/public/modules/projects/views/create-project.client.view.html
+++ b/public/modules/projects/views/create-project.client.view.html
@@ -1,8 +1,8 @@
 <section data-ng-controller="CreateProjectController" data-ng-init="confirm = true">
 	<md-card>
-		<md-card-content>
+		<md-card-content layout="column">
 			<form name="myForm">
-				<md-input-container>
+				<md-input-container style="width:100%">
 					<!-- Use floating label instead of placeholder -->
 					<label>Project name</label>
 					<input ng-model="projectName" type="text" required>
@@ -13,7 +13,7 @@
 					 <div  text-angular="text-angular" ta-toolbar="[['h1', 'h2', 'h3', 'bold', 'italics', 'underline','ul', 'ol'], ['html', 'insertImage', 'insertLink', 'redo', 'undo', 'clear', 'wordcount', 'charcount']]" ng-model="description" ta-disabled='isOpenForEstimation()'></div>
 				</div>
 
-				<md-input-container>
+				<md-input-container style="width:100%">
 					<label>Organisation</label>
 					<md-select ng-model="projectOrganisation" required>
 						<md-option ng-repeat="organisation in userOrganisations" value="{{organisation}}">
