More layout fixes

--- a/public/modules/organisations/views/create-organisation.client.view.html
+++ b/public/modules/organisations/views/create-organisation.client.view.html
@@ -2,12 +2,12 @@
     <md-card>
         <md-card-content>
             <form name="myForm">
-                <md-input-container>
+                <md-input-container style="width:100%">
                     <label>Organisation name</label>
                     <input ng-model="name" type="text" required>
                 </md-input-container>
                 
-                <md-input-container>
+                <md-input-container style="width:100%">
                     <label>Organisation description</label>
                     <textarea ng-model="description" required></textarea>
                 </md-input-container>
