--- a/public/modules/organisations/views/edit-organisation.client.view.html
+++ b/public/modules/organisations/views/edit-organisation.client.view.html
@@ -1,7 +1,7 @@
 <div ng-controller="OrganisationsController" flex = "100" data-ng-init="findOne()">
 	<md-card flex>
 		<md-card-content>
-			<md-input-container flex>
+			<md-input-container style="width:100%">
 				<label>Organisation Description</label>
 				<textarea ng-model="organisation.description"></textarea>
 			</md-input-container>
