--- a/public/modules/projects/views/create-project.client.view.html
+++ b/public/modules/projects/views/create-project.client.view.html
@@ -1,6 +1,6 @@
 <section data-ng-controller="CreateProjectController" data-ng-init="confirm = true">
 	<md-card>
-		<md-card-content layout="column">
+		<md-card-content>
 			<form name="myForm">
 				<md-input-container style="width:100%">
 					<!-- Use floating label instead of placeholder -->
