Added round numbers to tooltips

--- a/public/modules/projects/views/list-projects.client.view.html
+++ b/public/modules/projects/views/list-projects.client.view.html
@@ -48,7 +48,7 @@
 							</md-button>
 							<div style="padding: 10px; white-space: nowrap; overflow:hidden" class="md-toolbar-tools">
 								<h3>{{project.name}} round: {{ project.round }}</h3>
-								<md-tooltip>{{project.name}}</md-tooltip>
+								<md-tooltip>{{project.name}} round: {{ project.round }}</md-tooltip>
 
 							</div>
 							<md-button aria-label="View/Edit" class="md-icon-button" ng-click="goTo('/projects/{{project._id}}/edit')">
