Fixed sizing for discussion dialog

--- a/public/modules/projects/views/chat.dialog.client.view.html
+++ b/public/modules/projects/views/chat.dialog.client.view.html
@@ -9,7 +9,7 @@
 				</md-button>
 			</div>
 		</md-toolbar>
-		<md-dialog-content scrollTop="scrollHeight">
+		<md-dialog-content scrollTop="scrollHeight" style="max-width: 800px; max-height: 810px;">
 			<div class="md-dialog-content">
 				<md-list>
 					<md-list-item ng-if="currentNode.chat.length === 0">
