Hopefully the last layout changes

--- a/public/modules/users/views/authentication/signin.client.view.html
+++ b/public/modules/users/views/authentication/signin.client.view.html
@@ -31,11 +31,11 @@
 			<h3 class="col-md-12 text-center">Or with your account</h3> -->
 
 			<form data-ng-submit="signin()" autocomplete="off">
-				<md-input-container>
+				<md-input-container style="width:100%">
 					<label>Username or Email</label>
 					<input name="username" data-ng-model="credentials.username">
 				</md-input-container>
-				<md-input-container>
+				<md-input-container style="width:100%">
 					<label>Password</label>
 					<input id="password" name="password" type="password" data-ng-model="credentials.password">
 				</md-input-container>
