--- a/public/modules/users/views/authentication/signup.client.view.html
+++ b/public/modules/users/views/authentication/signup.client.view.html
@@ -31,27 +31,27 @@
 			<h3 class="col-md-12 text-center">Or with your email</h3> -->
 
 			<form name="userForm" data-ng-submit="signup()" novalidate autocomplete="off">
-				<md-input-container>
+				<md-input-container style="width:100%">
 					<label>First Name</label>
 					<input required id="firstName" name="firstName" data-ng-model="credentials.firstName">
 				</md-input-container>
-				<md-input-container>
+				<md-input-container style="width:100%">
 					<label>Last Name</label>
 					<input id="lastName" name="lastName" data-ng-model="credentials.lastName">
 				</md-input-container>
-				<md-input-container>
+				<md-input-container style="width:100%">
 					<label>Email</label>
 					<input id="email" name="email" data-ng-model="credentials.email">
 				</md-input-container>
-				<md-input-container>
+				<md-input-container style="width:100%">
 					<label>Username</label>
 					<input id="username" name="username" data-ng-model="credentials.username">
 				</md-input-container>
-				<md-input-container>
+				<md-input-container style="width:100%">
 					<label>Password</label>
 					<input type="password" id="password" name="password" data-ng-model="credentials.password">
 				</md-input-container>
-				<md-input-container>
+				<md-input-container style="width:100%">
 					<label>Confirm Password</label>
 					<input type="password" id="confirmationPassword" name="confirmationPassword" data-ng-model="confirmationPassword">
 				</md-input-container>
