--- a/public/modules/users/views/settings/edit-profile.client.view.html
+++ b/public/modules/users/views/settings/edit-profile.client.view.html
@@ -2,19 +2,19 @@
 	<md-card>
 		<md-card-content class = "car-header">
 			<form name="userForm" data-ng-submit="updateUserProfile(userForm.$valid)" autocomplete="off">
-				<md-input-container>
+				<md-input-container style="width:100%">
 					<label>First Name</label>
 					<input type="text" data-ng-model="user.firstName">
 				</md-input-container>
-				<md-input-container>
+				<md-input-container style="width:100%">
 					<label>Last Name</label>
 					<input type="text" data-ng-model="user.lastName">
 				</md-input-container>
-				<md-input-container>
+				<md-input-container style="width:100%">
 					<label>Email</label>
 					<input type="email" data-ng-model="user.email">
 				</md-input-container>
-				<md-input-container>
+				<md-input-container style="width:100%">
 					<label>Username</label>
 					<input data-ng-model="user.username">
 				</md-input-container>
