--- a/public/modules/projects/views/chat.dialog.client.view.html
+++ b/public/modules/projects/views/chat.dialog.client.view.html
@@ -26,7 +26,7 @@
 				<md-list-item>
 					<md-input-container flex>
 						<label> Add to discussion </label>
-						<textarea ng-model="chat" columns="1" autofocus ng-keypress="$event.which === 13 && submitChat(currentNode, chat)"></textarea> 
+						<input ng-model="chat" columns="1" autofocus ng-keypress="$event.which === 13 && submitChat(currentNode, chat)"></input> 
 					</md-input-container>
 					<md-button class="md-icon-button" aria-label="Use Android" data-nodrag ng-click="submitChat(currentNode, chat)" ng-disabled="chat === '' ">
 						<md-tooltip>
